[tool.poetry]
name = "capstone-center"
version = "0.1.0"
description = ""
authors = ["kmiya <miyak19@mytru.ca>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
