[tool.poetry]
name = "capstone-center"
version = "0.1.0"
description = ""
package-mode = false
authors = ["kmiya <miyak19@mytru.ca>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pyzmq = "^27.1.0"
msg-handler = { git = "https://github.com/TRU-Capstone-2026-WheelChock/wheelchoke-system-communication-system.git" }


[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1,<2.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-mock = ">=3.15.1,<4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]

pythonpath = "src"

testpaths = ["tests"]

addopts = "-ra -q"
